Hook query params to GET exercises endpoint
